force-app/main/default/objects/cgcloud__Contract_Template__c/cgcloud__Contract_Template__c.object-meta.xml
<CustomObject>
    <description>Contract and Tactic Templates object</description>
    <label>Contract Template</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contract Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>