force-app/main/default/objects/cgcloud__Contract_Template__c/fields/cgcloud__Account_Contract_Template__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Account_Contract_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Reference to the contract template with which the tactic template record is related. Mandatory for the tactic template record type.</description>
    <label>Customer Contract Template</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 AND (2 OR 3)</booleanFilter>
        <errorMessage>The Customer Contract Template and the Contract Template must have the same Sales Org.</errorMessage>
        <filterItems>
            <field>cgcloud__Contract_Template__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Customer Contract Template</value>
        </filterItems>
        <filterItems>
            <field>cgcloud__Contract_Template__c.cgcloud__Sales_Org__c</field>
            <operation>equals</operation>
            <valueField>$Source.cgcloud__Sales_Org__c</valueField>
        </filterItems>
        <filterItems>
            <field>$Source.cgcloud__Sales_Org__c</field>
            <operation>equals</operation>
            <value></value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>cgcloud__Contract_Template__c</referenceTo>
    <relationshipLabel>Contract Tactic Templates</relationshipLabel>
    <relationshipName>Contract_Templates_Account</relationshipName>
    <type>Lookup</type>
</CustomField>