force-app/main/default/objects/cgcloud__Contract_Template__c/fields/cgcloud__Active_Policy__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Active_Policy__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Specifies if a contract tactic of this type is initially preset as included in the contract (not considered if the contract tactic is manually added to the promotion).</description>
    <label>Active Policy</label>
    <type>Checkbox</type>
</CustomField>