force-app/main/default/objects/cgcloud__Contract_Template__c/fields/cgcloud__Automatic_Creation__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Automatic_Creation__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Describes whether the customer contract created approved with this template will leverage the creation of a contract payment.</description>
    <label>Automated Payment Generation</label>
    <type>Checkbox</type>
</CustomField>