force-app/main/default/objects/cgcloud__Contract_Template__c/fields/cgcloud__Copy_Tactics__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Copy_Tactics__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Describes whether the tactics created after this tactic template will be included in the copy of the contract.</description>
    <label>Copy Tactics</label>
    <type>Checkbox</type>
</CustomField>