force-app/main/default/objects/cgcloud__Contract_Template__c/fields/cgcloud__Job_Definition_List__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Job_Definition_List__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Reference to the job definition list.</description>
    <label>Activity</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>The Contract Template and the Activity must have the same Sales Org.</errorMessage>
        <filterItems>
            <field>cgcloud__Job_Definition_List__c.cgcloud__Job_Definition_List_Template__r.cgcloud__Consider_Account__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <filterItems>
            <field>$Source.cgcloud__Sales_Org__c</field>
            <operation>equals</operation>
            <valueField>cgcloud__Job_Definition_List__c.cgcloud__Job_Definition_List_Template__r.cgcloud__Sales_Org__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>cgcloud__Job_Definition_List__c</referenceTo>
    <relationshipLabel>Contract Templates</relationshipLabel>
    <relationshipName>Contract_Templates</relationshipName>
    <type>Lookup</type>
</CustomField>