force-app/main/default/objects/cgcloud__Contract_Template__c/fields/cgcloud__Max_Days__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Max_Days__c</fullName>
    <defaultValue>9999</defaultValue>
    <description>Maximum duration of the contract in days</description>
    <label>Max Days</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>