force-app/main/default/objects/cgcloud__Contract_Template__c/fields/cgcloud__Meta_Type__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Meta_Type__c</fullName>
    <description>Metatype for the integration with mobile device</description>
    <label>Meta Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CustomerContract</fullName>
            </value>
            <value>
                <fullName>Tactic</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>