force-app/main/default/objects/cgcloud__Contract_Template__c/fields/cgcloud__Min_Days__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Min_Days__c</fullName>
    <defaultValue>1</defaultValue>
    <description>Minimum duration of the contract in days</description>
    <label>Min Days</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>