force-app/main/default/objects/cgcloud__Contract_Template__c/fields/cgcloud__Preset__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Preset__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Describes whether the Tactic Template will be preset when creating the contract. If not checked, Tactics will be available for adding manually after creation.</description>
    <label>Preset</label>
    <type>Checkbox</type>
</CustomField>