force-app/main/default/objects/cgcloud__Contract_Template__c/fields/cgcloud__Product_Policy__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Product_Policy__c</fullName>
    <description>Describes the cardinality of the products related to the contracts based on this template.</description>
    <label>Product Policy</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>ZeroOrMore</fullName>
                <default>true</default>
                <label>ZeroOrMore</label>
            </value>
            <value>
                <fullName>OneOrMore</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>