force-app/main/default/objects/cgcloud__Contract_Template__c/fields/cgcloud__Sort_Count__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Sort_Count__c</fullName>
    <description>Holds the sort value</description>
    <label>Sort</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>