force-app/main/default/objects/cgcloud__Contract_Template__c/fields/cgcloud__Workflow__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Workflow__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Reference to the Workflow. Mandatory for the contract template record type.</description>
    <label>Workflow</label>
    <referenceTo>cgcloud__Workflow__c</referenceTo>
    <relationshipLabel>Contract Templates</relationshipLabel>
    <relationshipName>Contract_Templates</relationshipName>
    <type>Lookup</type>
</CustomField>