force-app/main/default/objects/cgcloud__Contract_Template__c/recordTypes/cgcloud__Contract_Tactic_Template.recordType-meta.xml
<RecordType>
    <fullName>cgcloud__Contract_Tactic_Template</fullName>
    <active>true</active>
    <description>Selection of the record type of the new tactic template</description>
    <label>Contract Tactic Template</label>
</RecordType>