force-app/main/default/objects/cgcloud__Contract_Template__c/recordTypes/cgcloud__Customer_Contract_Template.recordType-meta.xml
<RecordType>
    <fullName>cgcloud__Customer_Contract_Template</fullName>
    <active>true</active>
    <description>Selection of the record type of the new customer contract template</description>
    <label>Customer Contract Template</label>
</RecordType>