force-app/main/default/objects/cgcloud__Contract_Template__c/validationRules/cgcloud__Contract_Template_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Contract_Template_Rule</fullName>
    <active>true</active>
    <description>The Customer Contract Template can&apos;t be empty.</description>
    <errorConditionFormula>AND( RecordType.DeveloperName == &apos;Contract_Tactic_Template&apos;,  ISBLANK(cgcloud__Account_Contract_Template__r.Id ))</errorConditionFormula>
    <errorDisplayField>cgcloud__Account_Contract_Template__c</errorDisplayField>
    <errorMessage>The Customer Contract Template can&apos;t be empty.</errorMessage>
</ValidationRule>