force-app/main/default/objects/cgcloud__Contract_Template__c/validationRules/cgcloud__Job_Definition_List_can_not_be_change.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Job_Definition_List_can_not_be_change</fullName>
    <active>false</active>
    <errorConditionFormula>ISCHANGED( cgcloud__Job_Definition_List__c )</errorConditionFormula>
    <errorMessage>The Activity can&apos;t be edited after Contract Template creation.</errorMessage>
</ValidationRule>