force-app/main/default/objects/cgcloud__Contract_Template__c/validationRules/cgcloud__Maximum_Days.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Maximum_Days</fullName>
    <active>true</active>
    <errorConditionFormula>AND( RecordType.DeveloperName == &apos;Customer_Contract_Template&apos;,   OR( ISBLANK( cgcloud__Max_Days__c  ) ,cgcloud__Max_Days__c  &lt; 1, cgcloud__Max_Days__c &lt;  cgcloud__Min_Days__c))</errorConditionFormula>
    <errorDisplayField>cgcloud__Max_Days__c</errorDisplayField>
    <errorMessage>The Max Days must be a number equal or greater than 1 and equal or greater than the Min Days.</errorMessage>
</ValidationRule>