force-app/main/default/objects/cgcloud__Contract_Template__c/validationRules/cgcloud__Sales_org.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Sales_org</fullName>
    <active>true</active>
    <description>The Customer Contract Template and the Contract Template must have the same Sales Org.</description>
    <errorConditionFormula>AND( RecordType.DeveloperName == &apos;Contract_Tactic_Template&apos;,TEXT(cgcloud__Account_Contract_Template__r.cgcloud__Sales_Org__c) !=  TEXT(cgcloud__Sales_Org__c))</errorConditionFormula>
    <errorDisplayField>cgcloud__Sales_Org__c</errorDisplayField>
    <errorMessage>The Customer Contract Template and the Contract Template must have the same Sales Org.</errorMessage>
</ValidationRule>