force-app/main/default/objects/cgcloud__Contract_Template__c/validationRules/cgcloud__Sales_org_cannot_be_changed.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Sales_org_cannot_be_changed</fullName>
    <active>false</active>
    <errorConditionFormula>ISCHANGED( cgcloud__Sales_Org__c )</errorConditionFormula>
    <errorDisplayField>cgcloud__Sales_Org__c</errorDisplayField>
    <errorMessage>The Sales Org can&apos;t be edited after Contract Template creation.</errorMessage>
</ValidationRule>