force-app/main/default/objects/cgcloud__Contract_Template__c/validationRules/cgcloud__Sales_Org_should_be_same_for_Workflow.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Sales_Org_should_be_same_for_Workflow</fullName>
    <active>true</active>
    <description>The Contract Template and Workflow must have the same Sales Org.</description>
    <errorConditionFormula>NOT(ISBLANK( cgcloud__Workflow__c )) &amp;&amp; TEXT(cgcloud__Sales_Org__c) &lt;&gt; TEXT(cgcloud__Workflow__r.cgcloud__Sales_Org__c)</errorConditionFormula>
    <errorMessage>The Contract Template and Workflow must have the same Sales Org.</errorMessage>
</ValidationRule>