force-app/main/default/objects/cgcloud__Contract_Template__c/validationRules/cgcloud__Workflow_Required_Field.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Workflow_Required_Field</fullName>
    <active>true</active>
    <description>The Workflow can&apos;t be empty.</description>
    <errorConditionFormula>AND((RecordType.DeveloperName == &apos;Customer_Contract_Template&apos;), ISBLANK(cgcloud__Workflow__c))</errorConditionFormula>
    <errorDisplayField>cgcloud__Workflow__c</errorDisplayField>
    <errorMessage>The Workflow can&apos;t be empty.</errorMessage>
</ValidationRule>